tests/errors/linear_err/linear_err.c
#error linear_err.linear_err:4:7 This linear variable is not used.
#error linear_err.linear_err:10:21 This linear variable is already used and cannot be used here.
#error linear_err.linear_err:16:15 This linear variable is already used and cannot be used here.
#error linear_err.linear_err:22:7 This linear variable is not used.
#error linear_err.linear_err:28:23 This linear variable must not be used in this branch because the previous branch does not use it.
#error linear_err.linear_err:39:10 This branch must use a particular set of variables that are used in the previous branch. Variables: [part]
#error linear_err.linear_err:44:9 This linear variable is not used.
#error linear_err.linear_err:50:7 This linear variable is not used.
#error linear_err.linear_err:53:23 This linear variable must not be used in local functions and function expressions.
#error linear_err.linear_err:61:14 This linear variable cannot be defined by AS pattern.
#error linear_err.linear_err:67:7 This linear variable is not used.
#error linear_err.linear_err:74:8 This linear variable is not used.
#error linear_err.linear_err:82:11 Functions that take a linear value can't be partially applied.
#error linear_err.linear_err:99:7 This linear variable is not used.
#error linear_err.linear_err:103:7 This linear variable is not used.
#error linear_err.linear_err:110:7 This linear variable is not used.
#error linear_err.linear_err:117:7 This linear variable is not used.
#error linear_err.linear_err:123:13 This static variable cannot be linear type.
#error linear_err.linear_err:129:14 This generic function cannot bind type variables to linear types.
#error linear_err.linear_err:135:37 Fields cannot be linear for now.
#error linear_err.linear_err:139:26 This linear variant is invalid for now. This error happens when a union contains another linear union types. Consider to use __linear directly.
